Fixed CSS link and modified text alignment.

--- a/Homework/Assets/styles.css
+++ b/Homework/Assets/styles.css
@@ -1,6 +1,10 @@
 body {
-	background-color: blueviolet;
+	background-color: linen
 }
 .title-color {
 	color: blue;
+}
+
+p.card-text {
+	text-align: center;
 }
